Navigation bar redesign complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="nav_bar">
+        <div class="Brand">
+            <img src="Images/business_logo.svg" id="logo">
+        </div>
+        <div class="button_container">
+            <a class="nav_buttons">Home</a>
+            <a class="nav_buttons">Projects</a>
+            <a class="nav_buttons">Photos</a>
+        </div>
+    </div>
 </body>
 </html>
